--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,20 @@
     <groupId>DesignPatterns</groupId>
     <artifactId>DesignPatterns</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <junit.version>4.12</junit.version>
+    </properties>
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+
+        </dependency>
+
+    </dependencies>
 
 
 </project>
